--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoList">
         <activity
+            android:name=".weeklyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".subTaskActivity"
+            android:exported="false" />
+        <activity
+            android:name=".signinActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
