--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.firebase:firebase-auth-ktx'
 
+
     //These dependencies are required for the ViewModel (which gives us the ability to have data persist
-    //even if an activity is closed (i.e. rotating the device).
+    //even if an activity is closed (i.e. rotating the device)..
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
 }
