--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/checklis"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -18,9 +18,6 @@
             android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".taskCreationActivity"
-            android:exported="false" />
-        <activity
-            android:name=".weeklyActivity"
             android:exported="false" />
         <activity
             android:name=".signinActivity"
